--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="card d-flex-c">
           <div class="img-div d-flex">
             <img id="pineapplecut " src="./Assets/orangefruit.jpg" alt="" />
-            <img id="coca" src="/Assets2/cocacola.png" alt="" />
+            <img id="coca" src="./Assets2/cocacola.png" alt="" />
           </div>
           <h1 class="Coca">CocaCola</h1>
           <button>Buy Now</button>
